--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "jwt-decode": "^4.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
     "react-scripts": "^5.0.1",
     "web-vitals": "^0.2.4"
